1. add crispy form using ajax in project, projectassignee, holiday module 2. employee side crispy form setup

--- a/templates/admin/edit_holidays.html
+++ b/templates/admin/edit_holidays.html
@@ -12,7 +12,7 @@
 						</button>
 					</div>
 					<div class="modal-body">
-						<form method="post" action="holidays/update/{{edit_holiday.id}}" id="edit_holiday_form">
+						<form method="post" action="holidays/update/{{edit_holiday.id}}" id="form">
 							{% csrf_token %}
 							<div class="form-group">
 								{{ form.holiday_title|as_crispy_field }}
