--- a/templates/admin/project-view.html
+++ b/templates/admin/project-view.html
@@ -19,7 +19,7 @@
 								</ul>
 							</div>
 							<div class="col-auto float-right ml-auto">
-								<a href="#" class="btn add-btn" data-toggle="modal" data-target="#edit_project"><i class="fa fa-plus"></i> Edit Project</a>
+								<button class="btn add-btn" onclick="editProject({{projectdetailview.id}})"><i class="las la-lg la-pen-alt"></i> Edit Project</button>
 							</div>
 						</div>
 					</div>
@@ -211,17 +211,7 @@
 											</tr>
 											<tr>
 												<td>Priority:</td>
-												<td class="text-right">
-													<div class="btn-group">
-														<a href="#" class="badge badge-danger dropdown-toggle" data-toggle="dropdown">Highest </a>
-														<div class="dropdown-menu dropdown-menu-right">
-															<a class="dropdown-item" href="#"><i class="fa fa-dot-circle-o text-danger"></i> Highest priority</a>
-															<a class="dropdown-item" href="#"><i class="fa fa-dot-circle-o text-info"></i> High priority</a>
-															<a class="dropdown-item" href="#"><i class="fa fa-dot-circle-o text-primary"></i> Normal priority</a>
-															<a class="dropdown-item" href="#"><i class="fa fa-dot-circle-o text-success"></i> Low priority</a>
-														</div>
-													</div>
-												</td>
+												<td class="text-right">{{projectdetailview.project_priority}}</td>
 											</tr>
 											<tr>
 												<td>Created by:</td>
@@ -239,9 +229,12 @@
 									</div>
 								</div>
 							</div>
+							<div class="mb-2">
+							<button class="form-control btn btn-primary btn-sm" onclick="addProjectAssignee({{projectdetailview.id}})"><i class="fa fa-plus"></i> Add Project Assinee</button>
+							</div>
 							<div class="card project-user">
 								<div class="card-body">
-									<h6 class="card-title m-b-20">Assigned Leader <button type="button" class="float-right btn btn-primary btn-sm" data-toggle="modal" data-target="#assign_leader"><i class="fa fa-plus"></i> Add</button></h6>
+									<h6 class="card-title m-b-20">Assigned Leader</h6>
 									<ul class="list-box">
 										{% for project_leader in project_leader_list %}
 										<li>
@@ -264,10 +257,7 @@
 							</div>
 							<div class="card project-user">
 								<div class="card-body">
-									<h6 class="card-title m-b-20">
-										Assigned users
-										<button type="button" class="float-right btn btn-primary btn-sm" data-toggle="modal" data-target="#assign_user"><i class="fa fa-plus"></i> Add</button>
-									</h6>
+									<h6 class="card-title m-b-20">Assigned users</h6>
 									<ul class="list-box">
 										{% for project_team_member in project_team_member_list %}
 										<li>
@@ -293,234 +283,34 @@
                 </div>
 				<!-- /Page Content -->
 
-				<!-- Assign Leader Modal -->
-				<div id="assign_leader" class="modal custom-modal fade" role="dialog">
-					<div class="modal-dialog modal-dialog-centered" role="document">
-						<div class="modal-content">
-							<div class="modal-header">
-								<h5 class="modal-title">Assign Leader to this project</h5>
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-							<form action="{% url 'AdminAddProjectLeaderAssign' projectdetailview.id %}" method="post">
-							{% csrf_token %}
-								<div class="modal-body">
-									<div class="input-group m-b-30">
-										<input placeholder="Search to add a leader" class="form-control search-input" type="text">
-										<span class="input-group-append">
-											<button class="btn btn-primary">Search</button>
-										</span>
-									</div>
-									<div>
-										<ul class="chat-user-list">
-											{% for x in user_list %}
-											<li>
-												<div class="media">
-													<span class="avatar"><img alt="" src="{% static 'img/profiles/avatar-09.jpg' %}"></span>
-													<div class="media-body align-self-center text-nowrap">
-														<div class="user-name">{{x.username}}</div>
-														<span class="designation">{{x.designation}}</span>
-													</div>
-													<input class="action-circle medium complete-btn" type="checkbox" name="assign_leader_name" value="{{x.id}}">
-												</div>
-											</li>
-											{% endfor %}
-										</ul>
-									</div>
-									<div class="submit-section">
-										<button class="btn btn-primary submit-btn" type="submit">Submit</button>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-				<!-- /Assign Leader Modal -->
+				<div id="add-project-assignee-form"></div>
 
-				<!-- Assign User Modal -->
-				<div id="assign_user" class="modal custom-modal fade" role="dialog">
-					<div class="modal-dialog modal-dialog-centered" role="document">
-						<div class="modal-content">
-							<div class="modal-header">
-								<h5 class="modal-title">Assign the user to this project</h5>
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-							<form action="{% url 'AdminAddProjectEmployeeAssign' projectdetailview.id %}" method="post">
-							{% csrf_token %}
-								<div class="modal-body">
-									<div class="input-group m-b-30">
-										<input placeholder="Search to add a leader" class="form-control search-input" type="text">
-										<span class="input-group-append">
-											<button class="btn btn-primary">Search</button>
-										</span>
-									</div>
-									<div>
-										<ul class="chat-user-list">
-											{% for x in user_list %}
-											<li>
-												<div class="media">
-													<span class="avatar"><img alt="" src="{% static 'img/profiles/avatar-09.jpg' %}"></span>
-													<div class="media-body align-self-center text-nowrap">
-														<div class="user-name">{{x.username}}</div>
-														<span class="designation">{{x.designation}}</span>
-													</div>
-													<input class="action-circle medium complete-btn" type="checkbox" name="assign_employee_name" value="{{x.id}}">
-												</div>
-											</li>
-											{% endfor %}
-										</ul>
-									</div>
-									<div class="submit-section">
-										<button class="btn btn-primary submit-btn" type="submit">Submit</button>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-				<!-- /Assign User Modal -->
-				
-				<!-- Edit Project Modal -->
-				<div id="edit_project" class="modal custom-modal fade" role="dialog">
-					<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-						<div class="modal-content">
-							<div class="modal-header">
-								<h5 class="modal-title">Edit Project</h5>
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-							<div class="modal-body">
-								<form>
-									<div class="row">
-										<div class="col-sm-6">
-											<div class="form-group">
-												<label>Project Name</label>
-												<input class="form-control" value="Project Management" type="text">
-											</div>
-										</div>
-										<div class="col-sm-6">
-											<div class="form-group">
-												<label>Client</label>
-												<select class="select">
-													<option>Global Technologies</option>
-													<option>Delta Infotech</option>
-												</select>
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-sm-6">
-											<div class="form-group">
-												<label>Start Date</label>
-												<div class="cal-icon">
-													<input class="form-control datetimepicker" type="text">
-												</div>
-											</div>
-										</div>
-										<div class="col-sm-6">
-											<div class="form-group">
-												<label>End Date</label>
-												<div class="cal-icon">
-													<input class="form-control datetimepicker" type="text">
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-sm-3">
-											<div class="form-group">
-												<label>Rate</label>
-												<input placeholder="$50" class="form-control" value="$5000" type="text">
-											</div>
-										</div>
-										<div class="col-sm-3">
-											<div class="form-group">
-												<label>&nbsp;</label>
-												<select class="select">
-													<option>Hourly</option>
-													<option selected>Fixed</option>
-												</select>
-											</div>
-										</div>
-										<div class="col-sm-6">
-											<div class="form-group">
-												<label>Priority</label>
-												<select class="select">
-													<option selected>High</option>
-													<option>Medium</option>
-													<option>Low</option>
-												</select>
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-sm-6">
-											<div class="form-group">
-												<label>Add Project Leader</label>
-												<input class="form-control" type="text">
-											</div>
-										</div>
-										<div class="col-sm-6">
-											<div class="form-group">
-												<label>Team Leader</label>
-												<div class="project-members">
-													<a class="avatar" href="#" data-toggle="tooltip" title="Jeffery Lalor">
-														<img alt="" src="assets/img/profiles/avatar-16.jpg">
-													</a>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-sm-6">
-											<div class="form-group">
-												<label>Add Team</label>
-												<input class="form-control" type="text">
-											</div>
-										</div>
-										<div class="col-sm-6">
-											<div class="form-group">
-												<label>Team Members</label>
-												<div class="project-members">
-													<a class="avatar" href="#" data-toggle="tooltip" title="John Doe">
-														<img alt="" src="assets/img/profiles/avatar-02.jpg">
-													</a>
-													<a class="avatar" href="#" data-toggle="tooltip" title="Richard Miles">
-														<img alt="" src="assets/img/profiles/avatar-09.jpg">
-													</a>
-													<a class="avatar" href="#" data-toggle="tooltip" title="John Smith">
-														<img alt="" src="assets/img/profiles/avatar-10.jpg">
-													</a>
-													<a class="avatar" href="#" data-toggle="tooltip" title="Mike Litorus">
-														<img alt="" src="assets/img/profiles/avatar-05.jpg">
-													</a>
-													<span class="all-team">+2</span>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="form-group">
-										<label>Description</label>
-										<textarea rows="4" class="form-control" placeholder="Enter your message here"></textarea>
-									</div>
-									<div class="form-group">
-										<label>Upload Files</label>
-										<input class="form-control" type="file">
-									</div>
-									<div class="submit-section">
-										<button class="btn btn-primary submit-btn">Save</button>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /Edit Project Modal -->
+				<div id="edit-project-form"></div>
 				
             </div>
 			<!-- /Page Wrapper -->
+
+<script>
+
+function addProjectAssignee(addAssigneeProjectId) {
+    $.ajax({
+        url: "{% url 'AdminAddProjectAssignee' id=0 %}".replace(0, addAssigneeProjectId),
+        success: function(response) {
+            $("#add-project-assignee-form").html(response);
+				$("#add_project_assignee_model").modal('show');
+        }
+    });
+}
+
+function editProject(editProjectId) {
+    $.ajax({
+        url: "{% url 'AdminUpdateProject' id=0 %}".replace(0, editProjectId),
+        success: function(response) {
+            $("#edit-project-form").html(response);
+            $("#edit_project_model").modal('show');
+        }
+    });
+}
+</script>
+
 {% endblock body %}
